--- a/.github/workflows/jekyll-test.yml
+++ b/.github/workflows/jekyll-test.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/setup-ruby@v1
         with:
           ruby-version: 2.7
+          bundler-cache: true
 
       - name: Run tests.
         run: ./test.sh
