Add dependabot auto-update action versions and Update status badge names.

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,7 +1,7 @@
 ---
 
-name: Build and Deploy Jekyll site to gh-pages branch.
-
+# Build-Deploy Jekyll site to gh-pages branch
+name: build-deploy.
 on:
   push:
     branches:
