--- a/.github/workflows/dependabot-github-actions-deps-maintenance.yml
+++ b/.github/workflows/dependabot-github-actions-deps-maintenance.yml
@@ -20,7 +20,6 @@ jobs:
 
     env:
       PR_URL: ${{github.event.pull_request.html_url}}
-      GITHUB_TOKEN: ${{ secrets.DEPENDABOT_SECRET }}
 
     steps:
       - name: Checkout repository
@@ -29,13 +28,14 @@ jobs:
       - name: Fetch Dependabot PRs metadata
         id: dependabot-metadata
         uses: dependabot/fetch-metadata@v1.3.1
-        with: "$GITHUB_TOKEN"
+        with:
+          github-token: "${{ secrets.DEPENDABOT_SECRET }}"
 
       - name: Get PR details
         run: |
           gh pr view --json "$PR_URL" && gh pr view --comments "$PR_URL"
 
-      - name: Add a label that notes the PR updates for github_actions
+      - name: Add a label that notes the PR updates github_actions
         run: gh pr edit "$PR_URL" --add-label "github_actions_updates"
 
       - name: Approve Dependabot PRs
@@ -43,5 +43,5 @@ jobs:
           gh pr review --approve "$PR_URL"
 
       - name: Enable auto-merge for Dependabot PRs
-        if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'actions/checkout' || 'jameslves/github-pages-deploy-action' || 'dependabot/fetch-metadata')}}
+        if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'actions/checkout' || 'setup-ruby' || 'jameslves/github-pages-deploy-action' || 'dependabot/fetch-metadata')}}
         run: gh pr merge --auto --merge "$PR_URL"
