--- a/.github/workflows/dependabot-github-actions-deps-maintenance.yml
+++ b/.github/workflows/dependabot-github-actions-deps-maintenance.yml
@@ -29,7 +29,7 @@ jobs:
         id: dependabot-metadata
         uses: dependabot/fetch-metadata@v1.3.1
         with:
-          github-token: "${{ secrets.DEPENDABOT_SECRET }}"
+          github-token: "${{ secrets.PAT_DEPENDABOT }}"
 
       - name: Get PR details
         run: |
@@ -45,3 +45,4 @@ jobs:
       - name: Enable auto-merge for Dependabot PRs
         if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'actions/checkout' || 'setup-ruby' || 'jameslves/github-pages-deploy-action' || 'dependabot/fetch-metadata')}}
         run: gh pr merge --auto --merge "$PR_URL"
+
